# cmake-progress

./: .gitignore  CMakeLists.txt  README.md  TODO.md
resources/: long-pb  pass-through  pb  r-pass-through  stdin-test
src/: main.c  progressbar.c  progressbar.h  re.c  re.h
tests/: progressbar.c
